--- a/client/templates/tweetFeed.html
+++ b/client/templates/tweetFeed.html
@@ -13,6 +13,7 @@
                     </div>
                     <div class="panel-body">
                         {{this.message}}
+                        <!-- {{> likes tweetMessage}} -->
                         {{> tweetReplies tweetMessage}}
                         {{> replyBox tweetMessage}}
                     </div>
