--- a/client/templates/tweetReplies.html
+++ b/client/templates/tweetReplies.html
@@ -10,6 +10,7 @@
             </div>
             <div class="panel-body">
                 {{this.message}}
+                {{> likes tweetReply}}
             </div>
         </div>
         {{/each}}
