--- a/client/templates/userManagement.html
+++ b/client/templates/userManagement.html
@@ -22,10 +22,12 @@
                 <!-- Log in module -->
                 <h4>Sign In</h4>
                 <div class="form-group">
-                    <input class="form-control input-sm" id="login-username" placeholder="Username">
-                    <input class="form-control input-sm" id="login-password" placeholder="Password" type="password">
+                    <form>
+                        <input class="form-control input-sm" id="login-username" placeholder="Email" type="email" required>
+                        <input class="form-control input-sm" id="login-password" placeholder="Password" type="password" required>
+                        <button type="submit" class="btn btn-info fullbutton login" id="login">Log in</button>
+                    </form>
                 </div>
-                <button type="button" class="btn btn-info fullbutton login" id="login">Log in</button>
                 {{/if}}
             </div>
         </div>
@@ -35,11 +37,13 @@
                 <!-- Sign up module -->
                 <h4>Sign Up</h4>
                 <div class="form-group">
-                    <input class="form-control input-sm" id="signup-username" placeholder="Username">
-                    <input class="form-control input-sm" id="signup-fullname" placeholder="Full Name (Optional)">
-                    <input class="form-control input-sm" id="signup-password" placeholder="Password" type="password">
+                    <form>
+                        <input class="form-control input-sm" id="signup-username" placeholder="Email" type="email" required>
+                        <input class="form-control input-sm" id="signup-fullname" placeholder="Full Name (Optional)">
+                        <input class="form-control input-sm" id="signup-password" placeholder="Password" type="password" required>
+                        <button type="submit" class="btn btn-info fullbutton" id="signup">Sign up</button>
+                    </form>
                 </div>
-                <button type="button" class="btn btn-info fullbutton" id="signup">Sign up</button>
             </div>
         </div>
         {{/unless}}
