--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -3,11 +3,8 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class="col-sm-12 text-center">
-            <h1>Twitter Clone</h1>
-        </div>
-    </div>
+{{> navBar}}
+    
     <div class="row">
         {{#unless currentUser}}
         <div class="col-xs-4 col-xs-offset-4">
