--- a/client/templates/followUsers.html
+++ b/client/templates/followUsers.html
@@ -2,6 +2,7 @@
     <div class="follow-container">
         <div class="panel panel-default followBox">
             <div class="panel-body">
+            <h3 class="title">Follow Others</h3>
                 <!-- Input box for user to follow -->
                 <form class="form-inline">
                     <input type="text" class="form-control" id="searchUser" placeholder="Search for user">
