--- a/client/templates/likes.html
+++ b/client/templates/likes.html
@@ -1,5 +1,5 @@
 <template name="likes">
-    <div class="likes-container">
+    <span class="likes-container">
         <a class="toggle-like"><span class="glyphicon glyphicon-heart {{#if liked}} blue {{ else }} black {{/if}}" aria-hidden="true"></span></a> {{NofLikes}}
-    </div>
+    </span>
 </template>
