--- a/client/templates/tweetBox.html
+++ b/client/templates/tweetBox.html
@@ -2,6 +2,7 @@
     <div class="tweetbox-container">
         <div class="panel panel-default tweetbox">
             <div class="panel-body">
+            <h3 class="title">Tweet Something</h3>
                 <!-- Text box for tweet content -->
                 <textarea class="form-control" id="tweetText" placeholder="What's happening?" rows="3"></textarea>
                 <!-- Character count & button -->
